feat: streams